change bg color
problem is a size of bg class when its go to screen size <414

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   		<a href="#about">About</a>
   		<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 	</div>
-	<img id="logo" src="img/logoH.png" align="middle">
-	<img id="logoS" src="img/logoH2.png" align="middle">
+	<img id="logo" src="img/logoH.png">
+	<img id="logoS" src="img/logoH2.png">
 </div>
 <script type="text/javascript">
 	function myFunction() {
