--- a/index.html
+++ b/index.html
@@ -9,15 +9,27 @@
 <div class="bg">
 	<!-- NavBar -->
 	<div class="topnav" id="myTopnav">
-  		<a href="#home">Home</a>
-  		<a href="#news">News</a>
-  		<a href="#contact">Contact</a>
-  		<a href="#about">About</a>
+      <a href="#home">หน้าหลัก</a>
+      <a href="#about">ใช้ครั้งเเรก</a>
+      <a href="#contact">การสมัคร</a>
+  		<a href="#news">บริการ</a>
+      <a href="#เfaq">ข้อสงสัย</a>
   		<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 	</div>
 	<img id="logo" src="img/logoH.png">
 	<img id="logoS" src="img/logoH2.png">
 </div>
+
+<div class="main">
+  <div id="left-box">
+    <div id="title">Air Pay</div>
+    <div id="sub"><b>แอปพลิเคชัน</b> เพื่อการใช้จ่ายออนไลน์</div>
+  </div>
+  <div id="right-box">
+    <img id="splash" src="img/splash.png">
+  </div>
+</div>
+
 <script type="text/javascript">
 	function myFunction() {
     var x = document.getElementById("myTopnav");
