--- a/index.html
+++ b/index.html
@@ -25,6 +25,30 @@
   <div id="left-box">
     <div id="title">Air Pay</div>
     <div id="sub"><b>แอปพลิเคชัน</b> เพื่อการใช้จ่ายออนไลน์</div>
+    <div class="box">
+      <div id="lb">
+        <img id="chk" src="img/ok.png">
+      </div>
+      <div id="rb">
+        <div id="content">แอปพลิเคชัน เพื่อการใช้จ่ายออนไลน์</div>
+      </div>
+    </div>
+    <div class="box">
+      <div id="lb">
+        <img id="chk" src="img/ok.png">
+      </div>
+      <div id="rb">
+        <div id="content">แอปพลิเคชัน เพื่อการใช้จ่ายออนไลน์</div>
+      </div>
+    </div>
+    <div class="box">
+      <div id="lb">
+        <img id="chk" src="img/ok.png">
+      </div>
+      <div id="rb">
+        <div id="content">แอปพลิเคชัน เพื่อการใช้จ่ายออนไลน์</div>
+      </div>
+    </div>
   </div>
   <div id="right-box">
     <img id="splash" src="img/splash.png">
