--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img id="chk" src="img/ok.png">
       </div>
       <div id="rb">
-        <div id="content">แอปพลิเคชัน เพื่อการใช้จ่ายออนไลน์</div>
+        <div id="content">ปลอดภัยด้วยมาตรฐานระดับสากล</div>
       </div>
     </div>
     <div class="box">
@@ -38,7 +38,7 @@
         <img id="chk" src="img/ok.png">
       </div>
       <div id="rb">
-        <div id="content">แอปพลิเคชัน เพื่อการใช้จ่ายออนไลน์</div>
+        <div id="content">ง่ายกว่า เพราะรองรับทั้งบัญชีธนาคาร, บัตรเดบิต และเครดิต</div>
       </div>
     </div>
     <div class="box">
@@ -46,7 +46,7 @@
         <img id="chk" src="img/ok.png">
       </div>
       <div id="rb">
-        <div id="content">แอปพลิเคชัน เพื่อการใช้จ่ายออนไลน์</div>
+        <div id="content">คุ้มกว่าด้วยโปรโมชั่นจากพาร์ทเนอร์มากมาย</div>
       </div>
     </div>
   </div>
