--- a/index.html
+++ b/index.html
@@ -1,46 +1,94 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="stylesheet" type="text/css" href="css/home.css">
-  <link rel="icon" href="img/logoT.png">
-	<title>Airplay Guide</title>
-</head>
-<body>
-<div class="bg">
-	<!-- NavBar -->
-	<div class="topnav" id="myTopnav">
-      <a href="#home">หน้าหลัก</a>
-      <a href="#about">ใช้ครั้งเเรก</a>
-      <a href="#contact">การสมัคร</a>
-  		<a href="#news">บริการ</a>
-      <a href="#เfaq">ข้อสงสัย</a>
-  		<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-	</div>
-	<img id="logo" src="img/logoH.png">
-	<img id="logoS" src="img/logoH2.png">
-</div>
+	<head>
+		<title>Airpay Guide</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="icon" href="images/logoT.png">
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	</head>
+	<body id="top">
 
-<div class="main">
-  <div id="left-box">
-    <div id="title">Air Pay</div>
-    <div id="sub"><b>แอปพลิเคชัน</b> เพื่อการใช้จ่ายออนไลน์</div>
-  </div>
-  <div id="right-box">
-    <img id="splash" src="img/splash.png">
-  </div>
-</div>
+		<!-- Header -->
+			<header id="header">
+				<div class="content">
+					<h1><a href="#">คู่มือการใช้งาน Airpay</a></h1>
+					<p>บริการทางการเงินที่จะทำให้ชีวิตคุณ<br />
+					สะดวกสบายยิ่งขึ้นด้วยบริการอย่างครบวงจร</p>
+					<ul class="actions">
+						<li><a href="#one" class="button icon fa-chevron-down scrolly">อ่านต่อ</a></li>
+					</ul>
+				</div>
+				<div class="image phone"><div class="inner"><img src="images/screen.jpg" alt="" /></div></div>
+			</header>
 
-<script type="text/javascript">
-	function myFunction() {
-    var x = document.getElementById("myTopnav");
-    if (x.className === "topnav") {
-        x.className += " responsive";
-    } else {
-        x.className = "topnav";
-    }
-    }
- </script>
+		<!-- One -->
+			<section id="one" class="wrapper style2 special">
+				<header class="major">
+					<h2>AirPay<br />
+					แอปพลิเคชัน เพื่อการใช้จ่ายออนไลน์</h2>
+				</header>
+				<ul class="icons major">
+					<li><span class="icon fa-camera-retro"><span class="label">Shoot</span></span></li>
+					<li><span class="icon fa-refresh"><span class="label">Process</span></span></li>
+					<li><span class="icon fa-cloud"><span class="label">Upload</span></span></li>
+				</ul>
+			</section>
 
-</body>
+		<!-- Two -->
+			<section id="two" class="wrapper">
+				<div class="inner alt">
+					<section class="spotlight">
+						<div class="image"><img src="images/counterBG.jpg" alt="" /></div>
+						<div class="content">
+							<img class="images" src="images/counter.png">
+							<p>มากกว่า 40,000 จุดให้บริการทั่วประเทศ ให้คุณจ่ายบิล เติมเงินมือถือเติมเงินเกมด้วยเงินสดอย่างง่ายดาย</p>
+						</div>
+					</section>
+					<section class="spotlight">
+						<div class="image"><img src="images/appBG.jpg" alt="" /></div>
+						<div class="content">
+							<img class="images" src="images/app.png">
+							<p>ให้คุณใช้จ่ายผ่านบัญชี หรือบัตรเครดิต ซื้อตั๋วหนัง เติมเงินมือถือ จ่ายบิล และอื่นๆ จากมือถือของท่านเอง</p>
+						</div>
+					</section>
+				</div>
+			</section>
+
+		<!-- Three -->
+			<section id="three" class="wrapper style2 special">
+				<header class="major">
+					<h2>เกี่ยวกับเรา</h2>
+					<p>แอร์เพย์ คือทางเลือกใหม่ในการชำระเงินออนไลน์ ด้วยระบบความปลอดภัยที่ได้รับการยอมรับจากมาตรฐานระดับโลก <br />
+					ครอบคลุมการบริการที่ทั่วถึงและเพิ่มความสะดวกสบาย รวดเร็ว แก่ผู้ใช้</p>
+				</header>
+				<ul class="actions">
+					<li><a href="#" class="button special icon fa-download">Download</a></li>
+					<li><a href="#" class="button">Learn More</a></li>
+				</ul>
+			</section>
+
+		
+		<!-- Footer -->
+			<footer id="footer">
+				<ul class="icons">
+					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+				</ul>
+				<p class="copyright">&copy; Untitled. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
+			</footer>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
