--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 					ครอบคลุมการบริการที่ทั่วถึงและเพิ่มความสะดวกสบาย รวดเร็ว แก่ผู้ใช้</p>
 				</header>
 				<ul class="actions">
-					<li><a href="#" class="button special icon fa-download">Download</a></li>
-					<li><a href="#" class="button">Learn More</a></li>
+					<li><a href="https://play.google.com/store/apps/details?id=com.beeasy.airpay" class="download"><img src="images/googleplay.png"></a></li>
+					<li><a href="https://itunes.apple.com/th/app/airpay-th/id908669202?mt=8" class="download"><img src="images/appstore.png"></a></li>
 				</ul>
 			</section>
 
@@ -75,11 +75,10 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://www.facebook.com/TomtanZeRoAGE" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.instagram.com/rattanachat_tom/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
-				<p class="copyright">&copy; Untitled. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
+				<p class="copyright">&copy; Create for Multimedia Project</p>
 			</footer>
 
 		<!-- Scripts -->
