--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
 					<h2>AirPay<br />
 					แอปพลิเคชัน เพื่อการใช้จ่ายออนไลน์</h2>
 				</header>
-				<ul class="icons major">
-					<li><span class="icon fa-camera-retro"><span class="label">Shoot</span></span></li>
-					<li><span class="icon fa-refresh"><span class="label">Process</span></span></li>
-					<li><span class="icon fa-cloud"><span class="label">Upload</span></span></li>
-				</ul>
+				<ul class="actions">
+            <li><a href="#" class="button special">วิธีการเชื่อมต่อกับบัญชีธนาคาร</a></li>
+            <li><a href="#one" class="button special">วิธีการใช้แอพพลิเคชั่นในรูปเเบบต่างๆ</a></li>
+          </ul>
 			</section>
 
 		<!-- Two -->
