add scb regis to airpay

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					แอปพลิเคชัน เพื่อการใช้จ่ายออนไลน์</h2>
 				</header>
 				<ul class="actions">
-            <li><a href="#" class="button special">วิธีการเชื่อมต่อกับบัญชีธนาคาร</a></li>
+            <li><a href="scb.html" class="button special">วิธีการเชื่อมต่อกับบัญชีธนาคาร</a></li>
             <li><a href="#one" class="button special">วิธีการใช้แอพพลิเคชั่นในรูปเเบบต่างๆ</a></li>
           </ul>
 			</section>
