add all regis bank to app

--- a/bkb.html
+++ b/bkb.html
@@ -42,71 +42,43 @@
 			</section>
 			<section id="two" class="wrapper">
 			<header class="major">
-					<h2 style="color: #4e85e3">ธนาคารไทยพาณิชย์ / สมัครผ่านแอปฯ แอร์เพย์</h2>
+					<h2 style="color: #4e85e3">ธนาคารกรุงเทพ / สมัครผ่านแอปฯ แอร์เพย์</h2>
 				</header>
 				<div class="inner alt">
 					<section class="spotlight">
-						<div class="image"><img src="images/scb/01.png" alt="" /></div>
+						<div class="image"><img src="images/bkb/01.jpg" alt="" /></div>
 						<div class="content">
 							<h3>ขั้นตอนที่ 1</h3>
-							<p>กด "บัตรของฉัน"</p>
+							<p>เข้าไปที่เมนู “บัตรของฉัน” กดเลือกเพิ่มบัญชีธนาคาร กดเลือกธนาคารกรุงเทพ และกดไปที่ผูกบัญชีตอนนี้</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/scb/02.png" alt="" /></div>
+						<div class="image"><img src="images/bkb/02.jpg" alt="" /></div>
 						<div class="content">
 							<h3>ขั้นตอนที่ 2</h3>
-							<p>เลือกเพิ่มบัญชีธนาคาร</p>
+							<p>ระบุข้อมูลบัตรเอทีเอมของท่าน และกดไปที่ฉันไม่ใช่โปรแกรมอัตโนมัติ</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/scb/03.png" alt="" /></div>
+						<div class="image"><img src="images/bkb/03.jpg" alt="" /></div>
 						<div class="content">
 							<h3>ขั้นตอนที่ 3</h3>
-							<p>เลือก ธนาคารไทยพาณิชย์</p>
+							<p>ลงทะเบียนการผูกบัญชีโดยการกรอกข้อมูล รหัสบัตรประจำตัวประชาชนและเบอร์โทรศัพท์มือถือ คลิกเพื่อแสดงข้อตกลงในการใช้บริการ และกดถัดไป</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/scb/04.png" alt="" /></div>
+						<div class="image"><img src="images/bkb/04.jpg" alt="" /></div>
 						<div class="content">
 							<h3>ขั้นตอนที่ 4</h3>
-							<p>กด "ผูกบัญชีตอนนี้"</p>
+							<p>ตรวจสอบข้อมูลและกรอกหมายเลขรหัส OTP ที่คุณได้รับ และกดตรวจสอบ</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/scb/05.png" alt="" /></div>
+						<div class="image"><img src="images/bkb/05_1.jpg" alt="" /></div>
+						<div class="image"><img src="images/bkb/05_2.jpg" alt="" /></div>
 						<div class="content">
 							<h3>ขั้นตอนที่ 5</h3>
-							<p>กรอกเลขที่บัตร ATM, รหัสผ่าน (4 หรือ 6 หลัก), เลขบัตรประชาชน, และวันเดือนปีเกิด</p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/scb/06_1.png" alt="" /></div>
-						<div class="content">
-							<h3>ขั้นตอนที่ 6</h3>
-							<p>อ่านเงื่อนไขแล้วกด "ACCEPT" แล้วกด "YES"</p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/scb/07.png" alt="" /></div>
-						<div class="content">
-							<h3>ขั้นตอนที่ 7</h3>
-							<p>เลือก ธนาคารไทยพาณิชย์</p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/scb/08.png" alt="" /></div>
-						<div class="content">
-							<h3>ขั้นตอนที่ 8</h3>
-							<p>กรอก OTP เป็นอันเสร็จสิ้น</p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/scb/09_1.png" alt="" /></div>
-						<div class="image"><img src="images/scb/09_2.png" alt="" /></div>
-						<div class="content">
-							<h3>ขั้นตอนที่ 9</h3>
-							<p>หลังจากผูกบัญชีแล้ว กดที่แถบสีเทา กรอกเลขบัญชี 4 หลักสุดท้าย (ไม่ใช่เลขบัตร) และเลขบัตรประชาชนของคุณ จากนั้นกดยืนยันบัญชี</p>
+							<p>กดยืนยันการลงทะเบียนจนสำเร็จ และขั้นตอนสุดท้ายกดไปที่บัตรของฉัน ยืนยันข้อมูลเลขที่บัญชี และ เลขบัตรประชาชนเจ้าของบัญชี</p>
 						</div>
 					</section>
 				</div>
