--- a/ktb.html
+++ b/ktb.html
@@ -42,71 +42,50 @@
 			</section>
 			<section id="two" class="wrapper">
 			<header class="major">
-					<h2 style="color: #4e85e3">ธนาคารไทยพาณิชย์ / สมัครผ่านแอปฯ แอร์เพย์</h2>
+					<h2 style="color: #4e85e3">ธนาคารกรุงไทย / สมัครผ่านแอปฯ แอร์เพย์</h2>
 				</header>
 				<div class="inner alt">
 					<section class="spotlight">
-						<div class="image"><img src="images/scb/01.png" alt="" /></div>
+						<div class="image"><img src="images/ktb/01.jpg" alt="" /></div>
 						<div class="content">
 							<h3>ขั้นตอนที่ 1</h3>
-							<p>กด "บัตรของฉัน"</p>
+							<p>เข้าไปที่เมนู “บัตรของฉัน” กดเลือกเพิ่มบัญชีธนาคาร กดเลือกธนาคารกรุงไทย และกดไปที่ผูกบัญชีตอนนี้</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/scb/02.png" alt="" /></div>
+						<div class="image"><img src="images/ktb/02.jpg" alt="" /></div>
 						<div class="content">
 							<h3>ขั้นตอนที่ 2</h3>
-							<p>เลือกเพิ่มบัญชีธนาคาร</p>
+							<p>กดเลือกที่จะสมัครบริการโดย Card</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/scb/03.png" alt="" /></div>
+						<div class="image"><img src="images/ktb/03.jpg" alt="" /></div>
 						<div class="content">
 							<h3>ขั้นตอนที่ 3</h3>
-							<p>เลือก ธนาคารไทยพาณิชย์</p>
+							<p>ยอมรับเงื่อนไขการให้บริการ และกดไปที่ I agree แล้วกด Accept</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/scb/04.png" alt="" /></div>
+						<div class="image"><img src="images/ktb/04.jpg" alt="" /></div>
 						<div class="content">
 							<h3>ขั้นตอนที่ 4</h3>
-							<p>กด "ผูกบัญชีตอนนี้"</p>
+							<p>กรอกข้อมูลเจ้าของบัญชีให้ตรงกับระบบของธนาคารแล้วกดต่อไป</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/scb/05.png" alt="" /></div>
+						<div class="image"><img src="images/ktb/05.jpg" alt="" /></div>
 						<div class="content">
 							<h3>ขั้นตอนที่ 5</h3>
-							<p>กรอกเลขที่บัตร ATM, รหัสผ่าน (4 หรือ 6 หลัก), เลขบัตรประชาชน, และวันเดือนปีเกิด</p>
+							<p>เลือกหมายเลขโทรศัพท์ที่ทำการแจ้งกับระบบธนาคารเพื่อรับ OTP การสมัครใช้บริการ</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/scb/06_1.png" alt="" /></div>
+						<div class="image"><img src="images/ktb/06_1.jpg" alt="" /></div>
+						<div class="image"><img src="images/ktb/06_2.jpg" alt="" /></div>
 						<div class="content">
 							<h3>ขั้นตอนที่ 6</h3>
-							<p>อ่านเงื่อนไขแล้วกด "ACCEPT" แล้วกด "YES"</p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/scb/07.png" alt="" /></div>
-						<div class="content">
-							<h3>ขั้นตอนที่ 7</h3>
-							<p>เลือก ธนาคารไทยพาณิชย์</p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/scb/08.png" alt="" /></div>
-						<div class="content">
-							<h3>ขั้นตอนที่ 8</h3>
-							<p>กรอก OTP เป็นอันเสร็จสิ้น</p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/scb/09_1.png" alt="" /></div>
-						<div class="image"><img src="images/scb/09_2.png" alt="" /></div>
-						<div class="content">
-							<h3>ขั้นตอนที่ 9</h3>
-							<p>หลังจากผูกบัญชีแล้ว กดที่แถบสีเทา กรอกเลขบัญชี 4 หลักสุดท้าย (ไม่ใช่เลขบัตร) และเลขบัตรประชาชนของคุณ จากนั้นกดยืนยันบัญชี</p>
+							<p>ขั้นตอนสุดท้ายกดไปที่บัตรของฉัน ยืนยันข้อมูลเลขที่บัญชี และ เลขบัตรประชาชนเจ้าของบัญชี</p>
 						</div>
 					</section>
 				</div>
