--- a/tmb.html
+++ b/tmb.html
@@ -42,71 +42,68 @@
 			</section>
 			<section id="two" class="wrapper">
 			<header class="major">
-					<h2 style="color: #4e85e3">ธนาคารไทยพาณิชย์ / สมัครผ่านแอปฯ แอร์เพย์</h2>
+					<h2 style="color: #4e85e3">ธนาคารทหารไทย/ สมัครผ่านแอปฯ แอร์เพย์</h2>
 				</header>
 				<div class="inner alt">
 					<section class="spotlight">
-						<div class="image"><img src="images/scb/01.png" alt="" /></div>
+						<div class="image"><img src="images/tmb/01_1.jpg" alt="" /></div>
+						<div class="image"><img src="images/tmb/01_2.jpg" alt="" /></div>
 						<div class="content">
 							<h3>ขั้นตอนที่ 1</h3>
-							<p>กด "บัตรของฉัน"</p>
+							<p>กดเพิ่มบัญชี เลือกที่ TMB Bank/ธนาคารทหารไทย</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/scb/02.png" alt="" /></div>
+						<div class="image"><img src="images/tmb/02.jpg" alt="" /></div>
 						<div class="content">
 							<h3>ขั้นตอนที่ 2</h3>
-							<p>เลือกเพิ่มบัญชีธนาคาร</p>
+							<p>กด “ ยอมรับ “ เงื่อนไขการทำรายการ</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/scb/03.png" alt="" /></div>
+						<div class="image"><img src="images/tmb/03.jpg" alt="" /></div>
 						<div class="content">
 							<h3>ขั้นตอนที่ 3</h3>
-							<p>เลือก ธนาคารไทยพาณิชย์</p>
+							<p>กรอกข้อมูลเจ้าของบัญชี ให้ตรงกับข้อมูลของธนาคาร แล้วกด “ถัดไป”
+							<br>   เลขหน้าบัตร ATM 16 หลัก
+							<br>   เลขบัตรประชาชน 13 หลักหรือเลขที่หนังสือเดินทาง (Passport)
+							<br>   เบอร์โทรศัพท์ที่แจ้งไว้กับทางธนาคาร</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/scb/04.png" alt="" /></div>
+						<div class="image"><img src="images/tmb/04.jpg" alt="" /></div>
 						<div class="content">
 							<h3>ขั้นตอนที่ 4</h3>
-							<p>กด "ผูกบัญชีตอนนี้"</p>
+							<p>กรอกรหัสบัตร ATM 4 หลัก</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/scb/05.png" alt="" /></div>
+						<div class="image"><img src="images/tmb/05.jpg" alt="" /></div>
 						<div class="content">
 							<h3>ขั้นตอนที่ 5</h3>
-							<p>กรอกเลขที่บัตร ATM, รหัสผ่าน (4 หรือ 6 หลัก), เลขบัตรประชาชน, และวันเดือนปีเกิด</p>
+							<p>หน้ารายการข้อมูลการเชื่อมบัญชี ถ้าต้องการทำรายการต่อ ให้กด “ยืนยัน”</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/scb/06_1.png" alt="" /></div>
+						<div class="image"><img src="images/tmb/06.jpg" alt="" /></div>
 						<div class="content">
 							<h3>ขั้นตอนที่ 6</h3>
-							<p>อ่านเงื่อนไขแล้วกด "ACCEPT" แล้วกด "YES"</p>
+							<p>ระบบธนาคารจะส่งข้อความเป็นรหัส OTP ที่ทำรายการ นำ OTP มากรอกแล้วกด “ ถัดไป “
+หากไม่ได้รับ OTP จะต้องกด Request ใหม่อีกครั้ง หรือเช็คข้อมูลว่ามีการลงทะเบียนเบอร์อื่นไว้หรือไม่</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/scb/07.png" alt="" /></div>
+						<div class="image"><img src="images/tmb/07.jpg" alt="" /></div>
 						<div class="content">
 							<h3>ขั้นตอนที่ 7</h3>
-							<p>เลือก ธนาคารไทยพาณิชย์</p>
+							<p>หน้าจอแจ้งผลการเชื่อม บัญชีธนาคารสำเร็จ</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/scb/08.png" alt="" /></div>
+						<div class="image"><img src="images/tmb/08.jpg" alt="" /></div>
 						<div class="content">
 							<h3>ขั้นตอนที่ 8</h3>
-							<p>กรอก OTP เป็นอันเสร็จสิ้น</p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/scb/09_1.png" alt="" /></div>
-						<div class="image"><img src="images/scb/09_2.png" alt="" /></div>
-						<div class="content">
-							<h3>ขั้นตอนที่ 9</h3>
-							<p>หลังจากผูกบัญชีแล้ว กดที่แถบสีเทา กรอกเลขบัญชี 4 หลักสุดท้าย (ไม่ใช่เลขบัตร) และเลขบัตรประชาชนของคุณ จากนั้นกดยืนยันบัญชี</p>
+							<p>ยืนยันการเชื่อมบัญชีธนาคารโดยการกรอกเลข 4 หลักสุดท้ายของบัญชี และ เลขบัตรประชาชน</p>
 						</div>
 					</section>
 				</div>
