--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				</header>
 				<ul class="actions">
             <li><a href="scb.html" class="button special">วิธีการเชื่อมต่อกับบัญชีธนาคาร</a></li>
-            <li><a href="#one" class="button special">วิธีการใช้แอพพลิเคชั่นในรูปเเบบต่างๆ</a></li>
+            <li><a href="teach.html" class="button special">วิธีการใช้บริการต่างๆของแอพพลิเคชัน</a></li>
           </ul>
 			</section>
 
@@ -69,6 +69,15 @@
 					<li><a href="https://itunes.apple.com/th/app/airpay-th/id908669202?mt=8" class="download"><img src="images/appstore.png"></a></li>
 				</ul>
 			</section>
+
+      <section id="three" class="wrapper style2 special">
+        <header class="major">
+          <h2>Contact Us</h2>
+          <p>Facebook</p>
+        </header>
+          <a href="https://www.facebook.com/TomtanZeRoAGE" class="image" style="margin: 1% 1% 1% 1%;"><div class="box_box"><img src="images/prof1.jpg">นายรัตนฉัตร สุขสัมผัส 59070147</div></a>
+          <a href="https://www.facebook.com/mes.alonez?mt=8" class="image" style="margin: 1% 1% 1% 1%;"><div class="box_box"><img src="images/prof2.jpg">นายภควัต ยิ้มชื่น 59070127</div></a>
+      </section>
 
 		
 		<!-- Footer -->
