--- a/scb.html
+++ b/scb.html
@@ -20,7 +20,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
-					<h1><a href="#">สอนการเชื่อมต่อกับบัญชีธนาคาร</a></h1>
+					<h1><a href="#">วิธีการเชื่อมต่อกับบัญชีธนาคาร</a></h1>
 					<ul class="actions">
 						<li><a href="index.html" class="button icon fa-chevron-down scrolly">หน้าหลัก</a></li>
 						<li><a href="#one" class="button icon fa-chevron-down scrolly">อ่านต่อ</a></li>
