--- a/tmb.html
+++ b/tmb.html
@@ -8,7 +8,7 @@
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="icon" href="images/logoT.png">
 		<link rel="stylesheet" href="assets/css/teach.css" />
-		<link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Kanit&amp;subset=thai" rel="stylesheet">
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
